--- a/requirements.txt
+++ b/requirements.txt
@@ -9,17 +9,23 @@ beautifulsoup4==4.12.2
 certifi==2022.12.7
 charset-normalizer==3.1.0
 exceptiongroup==1.1.1
+filelock==3.12.0
 frozenlist==1.3.3
 greenlet==2.0.2
 h11==0.14.0
 idna==3.4
+Jinja2==3.1.2
 jsonpickle==3.0.1
 lxml==4.9.2
 Mako==1.2.4
 MarkupSafe==2.1.2
 mergedeep==1.3.4
+mpmath==1.3.0
 multidict==6.0.4
+networkx==3.1
+numpy==1.24.3
 outcome==1.2.0
+Pillow==9.5.0
 psutil==5.9.4
 PySocks==1.7.1
 python-dateutil==2.8.2
@@ -32,6 +38,9 @@ sniffio==1.3.0
 sortedcontainers==2.4.0
 soupsieve==2.4
 SQLAlchemy==1.4.20
+sympy==1.12
+torch==2.0.1
+torchvision==0.15.2
 tqdm==4.65.0
 trio==0.22.0
 trio-websocket==0.10.2
